Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-41864

Regression: FusionStyle PM_SubMenuOverlap not dpi-scaled anymore

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.4.0 Beta
    • 5.4.0 Beta
    • GUI: Look'n'Feel
    • None
    • e4493c41b641273e76558b568196a4629a7c4ea6

      https://codereview.qt-project.org/95125 removed dpi scaling for the returned PM_SubMenuOverlap under the wrong assumption that the negative pixel metric is a magic number.

      It is not a magic number. It is an offset, a negative one. One that lets submenus overlap.

        For Gerrit Dashboard: QTBUG-41864
        # Subject Branch Project Status CR V

            buddenha Oswald Buddenhagen
            portale Alessandro Portale
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes