DPI-scale PM_SubMenuOverlap after all

This actually isn't a magic value and needs to be scaled.

This partially reverts commit be1635e2d6a4e42f3f828e7831e5dbf867ba161d.

Task-number: QTBUG-41864
Change-Id: Ie03c96c8b5343386f55c3ae9b988e79f943f334e
Reviewed-by: Alessandro Portale <alessandro.portale@digia.com>

cregit: e4493c41b641273e76558b568196a4629a7c4ea6 https://github.com/qt/qtbase/commit/e4493c41b641273e76558b568196a4629a7c4ea6